--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/signature-generator/vite.svg" />
+    <link rel="icon" type="image/png" href="/signature-generator/david.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/signature-generator/assets/index.08ff9814.js"></script>
-    <link rel="stylesheet" href="/signature-generator/assets/index.3fce1f81.css">
+    <title>Generador de firmas</title>
+    <script type="module" crossorigin src="/signature-generator/assets/index.395c6a1b.js"></script>
+    <link rel="stylesheet" href="/signature-generator/assets/index.3fa35146.css">
   </head>
   <body>
     <div id="root"></div>
